syntax = "proto3";

package api.application.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "api/application/v1;v1";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    security_definitions: {
        security: {
        key: "bearer"
        value: {
            type: TYPE_API_KEY
            in: IN_HEADER
            name: "Authorization"
            description: "Authentication token, prefixed by Bearer: Bearer <token>"
        }
        }
    }
    security: {
        security_requirement: {
        key: "bearer"
        }
    }
};

message CreateRequest {
    string name = 1 [(validate.rules).string.min_len = 1];
    string homepage = 2 [(validate.rules).string.uri = true];
    optional string description = 3;
    string callback = 4 [(validate.rules).string.uri = true];
}

message CreateReply {
    string id = 1;
}

service Application {
    rpc Create(CreateRequest) returns (CreateReply) {
        option (google.api.http) = {
            post: "/application/v1"
            body: "*"
        };
    }
}
